# llm_zoomcamp

01-intro/: documents.json  rag-intro.ipynb  testing_openai.ipynb
02-open-source/: ollama.ipynb  rag-intro.ipynb
03-vector-search/: demo_es.ipynb  evaluate.ipynb  main.py  pyproject.toml
04-monitoring/: main.py  offline-rag-evaluation.ipynb  pyproject.toml
04-monitoring/app/: app.py  assistant.py  db.py  docker-compose.yaml  generate_data.py  prep.py  requirements.txt
