[project]
name = "03-vector-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elasticsearch",
    "scikit-learn",
    "openai",
    "tqdm",
    "streamlit",
    "sentence-transformers"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "notebook"
]
